--- a/pt_Sweepstakes/index.html
+++ b/pt_Sweepstakes/index.html
@@ -34,7 +34,7 @@
         }
     </script>
         <style>body {
-    background: url(936d9d7b2708eabd451a087d52b295b4.static.png) top left no-repeat fixed; /* Background Image */
+    background-image: url(936d9d7b2708eabd451a087d52b295b4.static.png) top left no-repeat fixed; /* Background Image */
     background-size: cover;
 }
 
