--- a/pt_sweepstakes/index.html
+++ b/pt_sweepstakes/index.html
@@ -82,7 +82,7 @@
                         </div>
                         
                         <!-- TITLE COLOR AND SIZE -->
-                        <div class="p1-narrow-survey-text" style="color:#17468f; font-size: 22px;"> Grattis ! <br>Vi ger ett begränsat antal personer chansen att få ett presentkort </div>                         
+                        <div class="p1-narrow-survey-text" style="color:#17468f; font-size: 22px;"> Parabéns ! <br>Estamos dando a um número limitado de pessoas a chance de obter um cartão-presente </div>                         
                         <div style="clear:both;">
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                     <!-- 1ST SURVEY QUESTION HERE-->
                     <div class="hidden" id="question1" onclick="hide('question1');unhide('question2');">
                         <div class="survey-question" onclick="hide('question1');unhide('question2');">
-                            (1/2)  Har du handlat på Willy's?  
+                            (1/2)  Você mora aqui?  
 </div>
                         <div class="survey-answer">
                             <div class="survey-answer-option" onclick="hide('question1');unhide('question2');">
@@ -135,21 +135,21 @@
                     <!-- 2ND SURVEY QUESTION HERE-->
                 <div class="hidden" id="question2" onclick="hide('question2');unhide('question3'); start_checker();">
                         <div class="survey-question" onclick="hide('question2');unhide('question3');">
-                            (2/2)    Vad uppskattar du med Willy's?
+                            (2/2)    O que você aprecia na Amazon?
 </div>
                         <div class="survey-answer">
                             <div class="survey-answer-option" onclick="hide('question2');unhide('question3'); start_checker();">
-                                Bra kvalitet	
-</div>
-                        </div>
-                        <div class="survey-answer">
-                            <div class="survey-answer-option" onclick="hide('question2');unhide('question3'); start_checker();">
-                                Bra priser		
+                                Boa qualidade	
 </div>
                         </div>
                         <div class="survey-answer">
                             <div class="survey-answer-option" onclick="hide('question2');unhide('question3'); start_checker();">
-                                Är nära där jag bor			
+                                Bons preços		
+</div>
+                        </div>
+                        <div class="survey-answer">
+                            <div class="survey-answer-option" onclick="hide('question2');unhide('question3'); start_checker();">
+                                É perto de onde eu moro		
 </div>
                         </div>
                     </div>
@@ -160,28 +160,28 @@
                     <div class="hidden" id="question3" onclick="location.href='w10.php?v=5003&amp;aff_id=2763&amp;aff_sub=&amp;aff_sub2=&amp;tid=25116924&amp;ppgender=&amp;ppemail=&amp;ppfirstname=&amp;pplastname=&amp;udc=Android--Samsung--SM-T530--tele2';">
                         <div id="checking">
                             <div class="survey-question" onclick="location.href='w10.php?v=5003&amp;aff_id=2763&amp;aff_sub=&amp;aff_sub2=&amp;tid=25116924&amp;ppgender=&amp;ppemail=&amp;ppfirstname=&amp;pplastname=&amp;udc=Android--Samsung--SM-T530--tele2';">
-                                Dina svar bearbetas...
+                                Suas respostas estão sendo processadas...
 </div>
                             <div>
                                 <img src="bfe25856e732533b2820dd5667bf6353.static.gif">
                             </div>
                             <div id="checking_1" class="survey-question hidden" onclick="location.href='w10.php?v=5003&amp;aff_id=2763&amp;aff_sub=&amp;aff_sub2=&amp;tid=25116924&amp;ppgender=&amp;ppemail=&amp;ppfirstname=&amp;pplastname=&amp;udc=Android--Samsung--SM-T530--tele2';">
-                                ✓ Inga dubbla registreringar hittades
+                                ✓ Não foram encontrados registos duplos
 </div>
                             <div id="checking_2" class="survey-question hidden" onclick="location.href='w10.php?v=5003&amp;aff_id=2763&amp;aff_sub=&amp;aff_sub2=&amp;tid=25116924&amp;ppgender=&amp;ppemail=&amp;ppfirstname=&amp;pplastname=&amp;udc=Android--Samsung--SM-T530--tele2';">
-                                ✓ Det finns tre (3) presentkort
+                                ✓ Existem três (3) cartões-presente
 </div>
                             <div id="checking_3" class="survey-question hidden" onclick="location.href='w10.php?v=5003&amp;aff_id=2763&amp;aff_sub=&amp;aff_sub2=&amp;tid=25116924&amp;ppgender=&amp;ppemail=&amp;ppfirstname=&amp;pplastname=&amp;udc=Android--Samsung--SM-T530--tele2';">
-                                ✓ Du är kvalificerad
+                                ✓ Você é qualificado
 </div>
                         </div>
                         <div id="checking_result" class="hidden">
                             <div class="survey-question" onclick="location.href='w10.php?v=5003&amp;aff_id=2763&amp;aff_sub=&amp;aff_sub2=&amp;tid=25116924&amp;ppgender=&amp;ppemail=&amp;ppfirstname=&amp;pplastname=&amp;udc=Android--Samsung--SM-T530--tele2';">
-                                GRATTIS! Du kan vinna!
+                                PARABÉNS! Você pode ganhar!
 </div>
                             <div class="survey-answer">
                                 <div class="survey-answer-option" onclick="location.href='w10.php?v=5003&amp;aff_id=2763&amp;aff_sub=&amp;aff_sub2=&amp;tid=25116924&amp;ppgender=&amp;ppemail=&amp;ppfirstname=&amp;pplastname=&amp;udc=Android--Samsung--SM-T530--tele2';">
-                                   Klicka HÄR för att gå vidare 
+                                Clique AQUI para seguir em frente 
 </div>
                             </div>
                         </div>
