--- a/pt_sweepstakes/index.html
+++ b/pt_sweepstakes/index.html
@@ -204,7 +204,7 @@
             <div>
                 <br>
                 <div style="text-align: center; font-size: 10px; color: #17468f;">
-                    OBS. Tävlingen slutar den <script>new Date().getFullYear()>2010&&document.write(new Date().getFullYear());</script>2022-12-31 .Denna tävling garanteras genom Kulklubben. <br> Vi hjälper våra kunder med att få svar på frågor som är viktiga för deras verksamhet. <br>Det är fritt fram att avanmäla sig från tävlingen när som helst om du inte längre vill delta i dragningen.<br> Presentkorten är inköpta på egen hand &amp; varumärkerna deltar inte i och är inte sponsorer till denna tävling.
+                    NOTA. A competição termina em <script>new Date().getFullYear()>2010&&document.write(new Date().getFullYear());</script>2022-12-31 .Esta competição é garantida através do Bullet Club. <br> Ajudamos nossos clientes a obter respostas a perguntas importantes para seus negócios. <br>É grátis cadastra-se, digite o que você precisa e receba orçamentos grátis em segundos.<br> Os cartões-presente são comprados por conta própria &amp; as marcas não participam e não são patrocinadores desta competição.
                 </div>
                 <div>
                     <div style="text-align: center; font-size: 10px; color: black;">
