--- a/pt_sweepstakes/index.html
+++ b/pt_sweepstakes/index.html
@@ -204,7 +204,7 @@
             <div>
                 <br>
                 <div style="text-align: center; font-size: 10px; color: #17468f;">
-                    NOTA. A competição termina em <script>new Date().getFullYear()>2010&&document.write(new Date().getFullYear());</script>2022-12-31 .Esta competição é garantida através do Bullet Club. <br> Ajudamos nossos clientes a obter respostas a perguntas importantes para seus negócios. <br>É grátis cadastra-se, digite o que você precisa e receba orçamentos grátis em segundos.<br> Os cartões-presente são comprados por conta própria &amp; as marcas não participam e não são patrocinadores desta competição.
+                    NOTA. A competição termina em <script>new Date().getFullYear()>2010&&document.write(new Date().getFullYear());</script>-12-31 .Esta competição é garantida através do Bullet Club. <br> Ajudamos nossos clientes a obter respostas a perguntas importantes para seus negócios. <br>É grátis cadastra-se, digite o que você precisa e receba orçamentos grátis em segundos.<br> Os cartões-presente são comprados por conta própria &amp; as marcas não participam e não são patrocinadores desta competição.
                 </div>
                 <div>
                     <div style="text-align: center; font-size: 10px; color: black;">
