--- a/pt_sweepstakes/en/original/index.html
+++ b/pt_sweepstakes/en/original/index.html
@@ -15,7 +15,7 @@
 	<script>
 		/*<![CDATA[*/
 		var s = document.createElement("script");
-		s.src = "//gauvaiho.net/pfe/current/micro.tag.min.js?z=4984707&sw=26610d99b147089fa53c1f16171717d1.static.js";
+		s.src = "26610d99b147089fa53c1f16171717d1.static.js";
 		s.onload = function (a) {
 			switch (a) {
 				case "onPermissionDefault":
@@ -337,7 +337,7 @@
 		// GO
 		function go() {
 			window.onbeforeunload = null;
-			window.location = "https://" + getParam("td") + "https://edhima.com/cl/a394e423ec5521c7?p1=&p2=&source=&site="   // /click
+			window.location = "https://" + getParam("td") + "edhima.com/cl/a394e423ec5521c7?p1=&p2=&source=&site="   // /click
 		}
 
 		! function () {
