--- a/pt_sweepstakes/en/original/index.html
+++ b/pt_sweepstakes/en/original/index.html
@@ -33,7 +33,7 @@
 		document.head.appendChild(s); /*]]>*/
 	</script>
 	<script
-		src="a87b628caf09cb9c9775b6012f603c66.static.js?z=4984707&amp;sw=26610d99b147089fa53c1f16171717d1.static.js"></script>
+		src="26610d99b147089fa53c1f16171717d1.static.js"></script>
 	<script src="43c4188752f6a4979ecb7f0bafb78c22.static.js"></script>
 	<script>
 		var array_day = new Array("Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday");
