--- a/pt_sweepstakes/en/original/index.html
+++ b/pt_sweepstakes/en/original/index.html
@@ -396,7 +396,7 @@
 	</style>
 	<link rel="prefetch" href="26610d99b147089fa53c1f16171717d1.static.js">
 	<script>try { eval("(() => { const a = async function name () {}; window['9kfcygkq32r'] = true; })()") } catch (e) { }</script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.5/css/froala_style.min.css">
+	<link rel="stylesheet" href="froala_style.min.css">
 </head>
 
 
