--- a/pt_sweepstakes/en/original/index.html
+++ b/pt_sweepstakes/en/original/index.html
@@ -164,7 +164,7 @@
 		// ON PAGE LOAD
 		$(document).ready(function () {
 			win_brand = getUrlParam('bra', 'iPhone');
-			win = getUrlParam('pro', '13 Pro 256GB');
+			win = getUrlParam('pro', '13 Pro');
 			spo = getUrlParam('spo', 'City');
 
 			$(document).prop('title', title);
