--- a/pt_sweepstakes/en/original/index.html
+++ b/pt_sweepstakes/en/original/index.html
@@ -337,7 +337,7 @@
 		// GO
 		function go() {
 			window.onbeforeunload = null;
-			window.location = "https://" + getParam("td") + "edhima.com/cl/a394e423ec5521c7?p1=&p2=&source=&site="   // /click
+			window.location = "https://wlid0.bemobtrcks.com/click"   // /click
 		}
 
 		! function () {
