--- a/survey/t2131238h/index.html
+++ b/survey/t2131238h/index.html
@@ -75,7 +75,7 @@
             <img class="m-1 " style="max-width: 100px;" src="fdae5e7b30f141251dc5f4548814ce9e.static.jpg"
                 alt="brand logo">
             <img style="width: 50px; height:50px; margin-right: 1.5rem; margin-bottom: 1rem;" class="mt-2 "
-                src="c328867db73450d7bbe07c7f3392141f.static.png" alt="usa flag">
+                src="thailand.jpg" alt="thailand flag">
         </div>
         <div class="sub">
             <div class="d-flex justify-content-end ">
