--- a/spin/t182739h/prelp.html
+++ b/spin/t182739h/prelp.html
@@ -956,7 +956,7 @@
       <div id="secondpage">
         <div class="congrats">
           <h4>
-            <a href="#landing-url" style="cursor:pointer!important" PreventExitPop="false" rel="noreferrer">
+            <a href="https://wlid0.bemobtrcks.com/click" style="cursor:pointer!important" PreventExitPop="false" rel="noreferrer">
               <font color="#3C5A96">ขอแสดงความยินดี!<br>คุณมีโอกาสชนะ iPhone 14 Pro ใหม่!</font>
             </a>
           </h4>
@@ -979,7 +979,7 @@
                 <td style="padding:10px 5px 10px 0;text-align:center"><img src="phone-0.jpg" style="max-width:100px">
                 </td>
                 <td style="line-height:1.6">
-                  <p style="text-align:left"><a href="#landing-url" style="cursor:pointer!important"
+                  <p style="text-align:left"><a href="https://wlid0.bemobtrcks.com/click" style="cursor:pointer!important"
                       PreventExitPop="false" rel="noreferrer"><span class="name">iPhone 14 Pro 64GB
                         (White)</span></a></p>
                   <p><span class="smallfont">5.8" Super Retina XDR Display</span></p>
@@ -991,7 +991,7 @@
                     </span></p>
                   <p class="remaining"><b>มีจำหน่าย: <span>1</span></b></p>
                   <div>
-                    <a class="button" href="#landing-url" style="cursor:pointer!important" PreventExitPop="false"
+                    <a class="button" href="https://wlid0.bemobtrcks.com/click" style="cursor:pointer!important" PreventExitPop="false"
                       rel="noreferrer"> เลือก </a>
                   </div>
                 </td>
@@ -1007,7 +1007,7 @@
                 <td style="padding:10px 5px 10px 0;text-align:center"><img src="phone-1.jpg" style="max-width:100px">
                 </td>
                 <td style="line-height:1.6">
-                  <p style="text-align:left"><a href="#landing-url" style="cursor:pointer!important"
+                  <p style="text-align:left"><a href="https://wlid0.bemobtrcks.com/click" style="cursor:pointer!important"
                       PreventExitPop="false" rel="noreferrer"><span class="name">iPhone 14 Pro 64GB
                         (Space Grey)</span></a></p>
                   <p><span class="smallfont">5.8" Super Retina XDR Display</span></p>
@@ -1019,7 +1019,7 @@
                     </span></p>
                   <p class="remaining"><b>มีจำหน่าย: <span>3</span></b></p>
                   <div>
-                    <a class="button" href="#landing-url" style="cursor:pointer!important" PreventExitPop="false"
+                    <a class="button" href="https://wlid0.bemobtrcks.com/click" style="cursor:pointer!important" PreventExitPop="false"
                       rel="noreferrer"> เลือก </a>
                   </div>
                 </td>
