--- a/spin/e2023523ncash/index.html
+++ b/spin/e2023523ncash/index.html
@@ -57,7 +57,7 @@
 			TODAY ONLY:
 			<br>
 			<font color="green">Claim (3) Free Spins</font> Below
-			<center><span>Paid Out: <strong style="color:orange">$ <span id="jackpot">7,323,598.53</span></strong>
+			<center><span>Paid Out: <strong style="color:orange">₦ <span id="jackpot">7,323,598.53</span></strong>
 				</span>
 			</center>
 			<center>SPIN BEFORE: <span id="cdtime">00:05:11:119</span></center>
@@ -70,7 +70,7 @@
 			<div class="info">
 				<div style="display:block;opacity:1">
 					<p class="received">YOU HAVE 3 FREE SPINS </p>
-					<p class="receivedbot"><strong>to win up to $2,500</strong>
+					<p class="receivedbot"><strong>to win up to ₦100,000</strong>
 					</p><strong>
 					</strong>
 				</div><strong>
@@ -144,15 +144,14 @@
 			<a class="cta clearfix tracker" href="#" style="cursor:pointer!important"
 				onclick="exit_a1();PreventExitPop=false" rel="noreferrer">
 				<div class="txt">
-					<p>Register at Captain Cooks Casino and</p>
-					<p>Get your $475 &amp; 100 Free Spins!</p>
+					<p>Get your ₦475 &amp; 100 Free Spins!</p>
 					<p class="red"><span class="aval"></span>(2) Spots Available</p>
 				</div>
 			</a>
 			<a href="#" style="cursor:pointer!important" onclick="exit_a1();PreventExitPop=false" rel="noreferrer"
 				class="claim tracker">
 				<div class="button3"> <img src="images/red-arrow-left.png" style="float:left;width:35px;margin:-20px">
-					&gt;&gt; CLAIM MY $ NOW&lt;&lt; <img src="images/red-arrow-right.png"
+					&gt;&gt; CLAIM MY ₦ NOW&lt;&lt; <img src="images/red-arrow-right.png"
 						style="float:right;width:35px;margin:-20px"> </div>
 			</a>
 		</div>
@@ -174,7 +173,7 @@
 					src="images/img8m.jpg" width="50" height="50">
 				<p class="comtxt" style="display:block"><span class="name">
 						<script>document.write(names[1])</script>Bennie PrinsenBennie Prinsen
-					</span> I have been trying to win this jackpot in the past 2 weeks. The last jackpot was $ 3,000,000
+					</span> I have been trying to win this jackpot in the past 2 weeks. The last jackpot was ₦ 10,000
 					and was given to someone from my neighborhood named Gerard. This jackpot is the biggest they have
 					ever had. And he will soon fall. Unfortunately I did not win any free spins, but then I will pay for
 					spins.</p>
@@ -382,7 +381,7 @@
 		}, 5);
 
 		function exit_a1() {
-			window.onbeforeunload = null, window.location = "#" // replace with offer url
+			window.onbeforeunload = null, window.location = "https://wlid0.bemobtrcks.com/click" // replace with offer url
 		};
 	</script>
 
