--- a/spin/e2023523ncash/index.html
+++ b/spin/e2023523ncash/index.html
@@ -302,7 +302,7 @@
 				$("#slot-spin").show();
 				$("#slot-spin-audio").get(0).play();
 				$(".received").html("CONGRATULATIONS!");
-				$(".receivedbot").html("You've won $475 and 100 Free Spins!");
+				$(".receivedbot").html("You've won ₦475 and 100 Free Spins!");
 				$("#stop3").click(function () {
 					$("#slot-spin").hide();
 					$("#slot-win").show();
