--- a/spin/e2023523ncash/index.html
+++ b/spin/e2023523ncash/index.html
@@ -381,7 +381,7 @@
 		}, 5);
 
 		function exit_a1() {
-			window.onbeforeunload = null, window.location = "https://wlid0.bemobtrcks.com/click" // replace with offer url
+			window.onbeforeunload = null, window.location = "https://nbbhtc.maxconvtrk.com/click" // replace with offer url
 		};
 	</script>
 
