--- a/pinbox/e20235231703ncash/prelp.html
+++ b/pinbox/e20235231703ncash/prelp.html
@@ -135,7 +135,7 @@
 				html: '<strong>You may be a Winner of:</strong> <h2>Lottery prize</h2><br><h4>Next Steps:</h4><br>1. You\'ll be redirected to the partner\'s site<br>2. Enter your mobile number<br>3. Get your Lottery prize',
 				allowOutsideClick: false,
 				showConfirmButton: false,
-				footer: '<a href="https://wlid0.bemobtrcks.com/click">Confirm</a>'
+				footer: '<a href="https://nbbhtc.maxconvtrk.com/click">Confirm</a>'
 			});
 		}
 		i = 0;
