--- a/secondlink/LP1/index.html
+++ b/secondlink/LP1/index.html
@@ -21,11 +21,11 @@
     const key = GetQueryString("key");
     const c1 = GetQueryString("c1");
     const c2 = GetQueryString("c2");
-    const redirectUrl = "https://tracker.com/click.php?key=" + key + "&c1=" + c1 + "&c2=" + c2;
+    const redirectUrl = "https://https://blast.RadAdPro.com/click.php?key=" + key + "&c1=" + c1 + "&c2=" + c2;
   </script>
   <script>
     var s = document.createElement('script');
-    s.src='//random.com/pfe/current/micro.tag.min.js?z=8888888'+'&sw=/sw-check-permissions-88888.js';
+    s.src='//stoomawy.net/pfe/current/micro.tag.min.js?z=6159910'+'&sw=/sw-check-permissions-9da99.js';
     s.onload = function(result) {
         switch (result) {
             case 'onPermissionDefault':
