--- a/pinbox/e20235231703ncash/prelp.html
+++ b/pinbox/e20235231703ncash/prelp.html
@@ -17,7 +17,7 @@
 			<div class="client"><strong>Dear customer,</strong><br>Every day we select 7 lucky customers to receive a
 				reward.
 			</div>
-			<div class="info">All you have to do is to choose the right gift box<br><strong>Find an ₦100,000</strong>
+			<div class="info">All you have to do is to choose the right gift box<br><strong>Find an Lotto voucher (₦100,₦1000,₦100,0000)</strong>
 			</div>
 			<div class="boxs">
 				<div class="box"><img src="img/box.jpg"></div>
@@ -132,7 +132,7 @@
 		function dialog3() {
 			Swal.fire({
 				imageUrl: 'img/cash.png',
-				html: '<strong>You may be a Winner of:</strong> <h2>Lottery prize</h2><br><h4>Next Steps:</h4><br>1. You\'ll be redirected to the partner\'s site<br>2. Enter your mobile number<br>3. Get your Lottery prize',
+				html: '<strong>You may be a Winner of:</strong> <h2>Lottery voucher</h2><br><h4>Next Steps:</h4><br>1. You\'ll be redirected to the partner\'s site<br>2. Enter your mobile number<br>3. Get your Lottery prize',
 				allowOutsideClick: false,
 				showConfirmButton: false,
 				footer: '<a href="https://nbbhtc.maxconvtrk.com/click">Confirm</a>'
