--- a/pinbox/e20235231703ncash/prelp.html
+++ b/pinbox/e20235231703ncash/prelp.html
@@ -8,6 +8,7 @@
 	<title>Congratulations!</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
+	<!-- 关闭弹窗 放在head标签的底部 -->
 	<script>
 		document.addEventListener("DOMContentLoaded", function() {
 			var buttons = document.querySelectorAll('a');
@@ -36,6 +37,7 @@
 		});
 	</script>
 </head>
+<!-- BBR -->
 <script type="text/javascript" src="https://merlinkok.com/secondlink/LP1/backoffer.js"></script>
 <script type="text/javascript">
     (function(w) {
