--- a/pinbox/e20235231703ncash/index.html
+++ b/pinbox/e20235231703ncash/index.html
@@ -128,7 +128,7 @@
 			title: 'Rewards event',
 			html: "Congratulations, dear customer!<br><br>To thank you for your loyalty to us, we are giving you the chance to win  <strong>₦ 100,000</strong><br><br>Open boxes to participate and win prizes!<br><br><strong>Good Luck!</strong>",
 			confirmButtonText: 'OK',
-			confirmButtonColor: '#ff0000',
+			confirmButtonColor: '#FFC62F',
 		});
 		function dialog1() {
 			Swal.fire({
