--- a/pinbox/e20235231703ncash/index.html
+++ b/pinbox/e20235231703ncash/index.html
@@ -128,13 +128,13 @@
 			title: 'Rewards event',
 			html: "Congratulations, dear customer!<br><br>To thank you for your loyalty to us, we are giving you the chance to win  <strong>₦ 100,000</strong><br><br>Open boxes to participate and win prizes!<br><br><strong>Good Luck!</strong>",
 			confirmButtonText: 'OK',
-			confirmButtonColor: '#ffc62f',
+			confirmButtonColor: '##ff0000',
 		});
 		function dialog1() {
 			Swal.fire({
 				text: 'Unfortunately, this box is empty. You still have (2) tries. Good luck!',
 				confirmButtonText: 'OK',
-				confirmButtonColor: '#ffc62f',
+				confirmButtonColor: '#ff0000',
 				icon: 'success'
 			});
 		}
@@ -142,7 +142,7 @@
 			Swal.fire({
 				text: 'Unfortunately, this box is empty. You still have (1) try. Good luck!',
 				confirmButtonText: 'OK',
-				confirmButtonColor: '#ffc62f',
+				confirmButtonColor: '#ff0000',
 				icon: 'success'
 			});
 		}
