--- a/survey/surveyen/index.html
+++ b/survey/surveyen/index.html
@@ -252,7 +252,7 @@ Others
     </div>
     <div class="gifts__result hide">
       <div class="button">
-        <button style="color: #ffffff !important;padding: 6px 20px;background: #002E87;border-radius: 20px" class="button__text btnPrize" onclick="window.open('https://blast.radadpro.com/click/','_blank'); launchext(); exit_a1();">Get it now</button>
+        <button style="color: #ffffff !important;padding: 6px 20px;background: #002E87;border-radius: 20px" class="button__text btnPrize" onclick="window.open('https://blast.radadpro.com/click','_blank'); launchext(); exit_a1();">Get it now</button>
       </div>
     </div>
   </div>
