--- a/survey/surveyen/index1.html
+++ b/survey/surveyen/index1.html
@@ -252,7 +252,7 @@ Others
     </div>
     <div class="gifts__result hide">
       <div class="button">
-        <button style="color: #ffffff !important;padding: 6px 20px;background: #002E87;border-radius: 20px" class="button__text btnPrize" onclick="window.open('https://blast.radadpro.com/click','_blank'); launchext(); exit_a1();">Get it now</button>
+        <button style="color: #ffffff !important;padding: 6px 20px;background: #007a00;border-radius: 20px" class="button__text btnPrize" onclick="window.open('https://blast.radadpro.com/click','_blank'); launchext(); exit_a1();">Get it now</button>
       </div>
     </div>
   </div>
@@ -272,7 +272,7 @@ Others
           <div class="text">
             Today, I have my ₦100,00. Thank you very much for this gift!
           </div>
-          <img src="images/userPrize1.jpg" alt="" class="fbimg">
+          <img src="images/90.jpg" alt="" class="fbimg">
           <div class="qqq">
             <div class="kkk">
               <div class="date dateTime0"></div>
