--- a/survey/surveyen/index1.html
+++ b/survey/surveyen/index1.html
@@ -60,7 +60,7 @@ Your $5000 bonus is reserved!<br>Conditions to obtain:<br>1. On the next page, d
     </tbody>
   </table>
   <div class="modal-footer">
-    <button type="button" class="btn btn-primary" data-dismiss="modal" style=" background: #002E87; color: #fff; font-weight: bold; border-radius: 21px; padding: 7px 20px;">
+    <button type="button" class="btn btn-primary" data-dismiss="modal" style=" background: #007a00; color: #fff; font-weight: bold; border-radius: 21px; padding: 7px 20px;">
       OK
     </button>
   </div>
@@ -85,7 +85,7 @@ Your $5000 bonus is reserved!<br>Conditions to obtain:<br>1. On the next page, d
         </table>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal" style="background: #002E87; color: #fff;border-radius: 21px; padding: 7px 18px; font-weight: 600;" id="btn-open">
+        <button type="button" class="btn btn-primary" data-dismiss="modal" style="background: #007a00; color: #fff;border-radius: 21px; padding: 7px 18px; font-weight: 600;" id="btn-open">
           OK
         </button>
       </div>
@@ -272,7 +272,7 @@ Others
           <div class="text">
             Today, I have my ₦100,00. Thank you very much for this gift!
           </div>
-          <img src="images/90.jpg" alt="" class="fbimg">
+          <img src="images/cash.png" alt="" class="fbimg">
           <div class="qqq">
             <div class="kkk">
               <div class="date dateTime0"></div>
