--- a/survey/surveyen/index1.html
+++ b/survey/surveyen/index1.html
@@ -128,8 +128,8 @@ Your $5000 bonus is reserved!<br>Conditions to obtain:<br>1. On the next page, d
       <h3 class="question__title">Question <span class="question__num">1</span> of 3:
         Which device are you using now? 
       </h3>
-      <div class="button answer">
-        <button class="button__text">
+      <div class="button answer" >
+        <button class="button__text" style=" background: #007a00;">
 Personal Computer / Notebook
 
 </button>
@@ -270,7 +270,7 @@ Others
         <td align="left" valign="top" class="commentpad">
           <div class="name">Fan Leriz</div>
           <div class="text">
-            Today, I have my ₦100,00. Thank you very much for this gift!
+            Today, I have my ₦100,000. Thank you very much for this gift!
           </div>
           <img src="images/cash.png" alt="" class="fbimg">
           <div class="qqq">
