--- a/survey/surveyen/index1.html
+++ b/survey/surveyen/index1.html
@@ -700,7 +700,7 @@
             <td>
               <img
                 alt=""
-                src="images/play_logo.png"
+                src="images/spinlotto_logo.png"
                 style="
                   max-width: 250px;
                   margin: -8px auto 10px auto;
