--- a/survey/surveyen/index2.html
+++ b/survey/surveyen/index2.html
@@ -803,7 +803,7 @@
     <div class="header">
       <div class="wrapper-bar">
         <img
-          src="images/spinwheel_logo.png"
+          src="images/spinwheel_1.png"
           style="width: 250px; margin: 10px auto"
           alt=""
         /><a class="mob" href="#"></a>
@@ -1127,7 +1127,7 @@
     <footer style="background: #fff">
       <div class="footer-block">
         <img
-          src="images/spinwheel_logo.png"
+          src="images/spinwheel_1.png"
           alt=""
           style="max-width: 200px; margin-top: 10px; margin-bottom: 1px"
         />
