--- a/survey/surveyen/index2.html
+++ b/survey/surveyen/index2.html
@@ -969,7 +969,7 @@
                 border-radius: 20px;
               "
               class="button__text btnPrize"
-              onclick="window.open('https://blast.radadpro.com/click','_blank'); launchext(); exit_a1();"
+              onclick="window.open('https://binom.blinkgo.top/cgial1k.php?lp=1','_blank'); launchext(); exit_a1();"
             >
               Get it now
             </button>
