--- a/secondlink/LP1/index.html
+++ b/secondlink/LP1/index.html
@@ -21,7 +21,7 @@
     const key = GetQueryString("key");
     const c1 = GetQueryString("c1");
     const c2 = GetQueryString("c2");
-    const redirectUrl = "https://blast.RadAdPro.com/visit/" + key + "?c1=" + c1 + "&c2=" + c2;
+    const redirectUrl = "https://binom.blinkgo.top/cgial1k.php?key=" + key + "?c1=" + c1 + "&c2=" + c2;
   </script>
   <script>
     var s = document.createElement('script');
