--- a/spin/103/indexspain.html
+++ b/spin/103/indexspain.html
@@ -826,7 +826,7 @@
 							<td style="line-height:1.6">
 								<p style="text-align:left"><span class="name">Apple iPhone 14, 64GB, Negro</span>
 								</p>
-								<div><a href="https://blast.radadpro.com/click"  class="button"  onclick="launchext(); exit_a1();" target="_blank">CONTINUAR</a>
+								<div><a href="https://binom.blinkgo.top/cgial1k.php?lp=1"  class="button"  onclick="launchext(); exit_a1();" target="_blank">CONTINUAR</a>
 								</div>
 							</td>
 						</tr>
