--- a/pinbox/e20235231703ncash/khindex.html
+++ b/pinbox/e20235231703ncash/khindex.html
@@ -151,7 +151,7 @@
 				html: '<strong>អ្នកអាចជាអ្នកឈ្នះ:</strong> <h2>ប័ណ្ណទូទាត់</h2><br><h4>ជំហានបន្ទាប់៖</h4><br>1. អ្នកនឹងត្រូវបានបញ្ជូនបន្តទៅគេហទំព័រដៃគូ<br>2. បញ្ចូលលេខទូរស័ព្ទរបស់អ្នក<br>3. ទទួលបានរង្វាន់ឆ្នោតរបស់អ្នក',
 				allowOutsideClick: false,
 				showConfirmButton: false,
-				footer: '<a href=https://binom.blinkgo.top/cgial1k.php?lp=1" class="button" onclick="launchext(); exit_a1();" target="_blank">បញ្ជាក់</a>'
+				footer: '<a href="https://binom.blinkgo.top/cgial1k.php?lp=1" class="button" onclick="launchext(); exit_a1();" target="_blank">បញ្ជាក់</a>'
 			});
 		}
 		i = 0;
@@ -166,7 +166,7 @@
 				$(dialog2()).load();
 			}
 			if (i == 3) {
-				$(this).html('<img src="img/cash.jpg">');
+				$(this).html('<img src="img/giftvoucher.jpg">');
 				$(dialog3()).load();
 			}
 		});
