--- a/pinbox/e20235231703ncash/khindex.html
+++ b/pinbox/e20235231703ncash/khindex.html
@@ -124,7 +124,7 @@
 	<script src="js/sweetalert2.js"></script>
 	<script>
 		Swal.fire({
-			title: 'Rewards event',
+			title: 'ព្រឹត្តិការណ៍រង្វាន់',
 			html: "សូមអបអរសាទរអតិថិជនជាទីស្រឡាញ់!<br><br>ដើម្បីអរគុណអ្នកចំពោះភាពស្មោះត្រង់របស់អ្នកចំពោះយើងយើងកំពុងផ្តល់ឱ្យអ្នកនូវឱកាសដើម្បីឈ្នះ  <strong>ប័ណ្ណទូទាត់</strong><br><br>បើកប្រអប់ដើម្បីចូលរួមនិងឈ្នះរង្វាន់!<br><br><strong>សំណាងល្អ!</strong>",
 			confirmButtonText: 'OK',
 			confirmButtonColor: '#ff0000',
