--- a/pinbox/e20235231703ncash/khindex.html
+++ b/pinbox/e20235231703ncash/khindex.html
@@ -118,7 +118,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="footer">Apple promo</div>
+		<div class="footer">ហើរ</div>
 	</div>
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/sweetalert2.js"></script>
