--- a/survey/surveyen/khindex.html
+++ b/survey/surveyen/khindex.html
@@ -50,7 +50,7 @@
     <tbody>
     <tr>
       <td>
-        <img alt="" src="images/play_logo.png" style="max-width:250px;margin: -8px auto 10px auto; display: block;">
+        <img alt="" src="images/Cambodia.png" style="max-width:250px;margin: -8px auto 10px auto; display: block;">
         <p style="font-size: 16px; color: #000; ">
 Your $5000 bonus is reserved!<br>Conditions to obtain:<br>1. On the next page, download and install the Android app; <br>2. Open the app and earn $5000 for trading;<br> 3. Trade and study to make money!
         </p>
@@ -96,7 +96,7 @@ Your $5000 bonus is reserved!<br>Conditions to obtain:<br>1. On the next page, d
   
   <div class="wrapper-bar">
     
-    <img src="images/playbox_logo.png" style="width: 250px; margin: 10px auto;" alt=""><a class="mob" href="#"></a>
+    <img src="images/Cambodia.png" style="width: 250px; margin: 10px auto;" alt=""><a class="mob" href="#"></a>
   </div>
 </div>
 
@@ -389,7 +389,7 @@ Others
 </div>
 <footer style="background: #fff;">
   <div class="footer-block">
-    <img src="images/playbox_logo.png" alt="" style="max-width: 200px;margin-top: 10px; margin-bottom: 1px;">
+    <img src="images/Cambodia.png" alt="" style="max-width: 200px;margin-top: 10px; margin-bottom: 1px;">
     <span style="color: #333;">
     © All Rights Reserved.
 </span>
