--- a/survey/surveyen/khindex.html
+++ b/survey/surveyen/khindex.html
@@ -76,7 +76,7 @@ Your $5000 bonus is reserved!<br>Conditions to obtain:<br>1. On the next page, d
           <tbody>
           <tr>
             <td>
-              <img src="images/playbox_logo.png" alt="" style="margin: -10px auto 0 auto; display: block; max-width: 250px; margin-bottom: 10px;">
+              <img src="images/Cambodia.png" alt="" style="margin: -10px auto 0 auto; display: block; max-width: 250px; margin-bottom: 10px;">
               <p style="font-size: 16px; color: #000; text-align: center;line-height: 1.6">
                 Every day, we select a small group of users and give them the opportunity to receive valuable gifts from our partners and sponsors. This is our opportunity to thank you.
             </p></td>
