--- a/survey/surveyen/khindex.html
+++ b/survey/surveyen/khindex.html
@@ -50,7 +50,7 @@
     <tbody>
     <tr>
       <td>
-        <img alt="" src="images/Cambodia.png" style="max-width:250px;margin: -8px auto 10px auto; display: block;">
+        <img alt="" src="images/Cambodia_logo.png" style="max-width:250px;margin: -8px auto 10px auto; display: block;">
         <p style="font-size: 16px; color: #000; ">
 Your $5000 bonus is reserved!<br>Conditions to obtain:<br>1. On the next page, download and install the Android app; <br>2. Open the app and earn $5000 for trading;<br> 3. Trade and study to make money!
         </p>
@@ -76,7 +76,7 @@ Your $5000 bonus is reserved!<br>Conditions to obtain:<br>1. On the next page, d
           <tbody>
           <tr>
             <td>
-              <img src="images/Cambodia.png" alt="" style="margin: -10px auto 0 auto; display: block; max-width: 250px; margin-bottom: 10px;">
+              <img src="images/Cambodia_logo.png" alt="" style="margin: -10px auto 0 auto; display: block; max-width: 250px; margin-bottom: 10px;">
               <p style="font-size: 16px; color: #000; text-align: center;line-height: 1.6">
                 Every day, we select a small group of users and give them the opportunity to receive valuable gifts from our partners and sponsors. This is our opportunity to thank you.
             </p></td>
@@ -96,7 +96,7 @@ Your $5000 bonus is reserved!<br>Conditions to obtain:<br>1. On the next page, d
   
   <div class="wrapper-bar">
     
-    <img src="images/Cambodia.png" style="width: 250px; margin: 10px auto;" alt=""><a class="mob" href="#"></a>
+    <img src="images/Cambodia_logo.png" style="width: 250px; margin: 10px auto;" alt=""><a class="mob" href="#"></a>
   </div>
 </div>
 
