--- a/survey/surveyen/khindex.html
+++ b/survey/surveyen/khindex.html
@@ -389,7 +389,7 @@ Others
 </div>
 <footer style="background: #fff;">
   <div class="footer-block">
-    <img src="images/Cambodia.png" alt="" style="max-width: 200px;margin-top: 10px; margin-bottom: 1px;">
+    <img src="images/Cambodia_logo.png" alt="" style="max-width: 200px;margin-top: 10px; margin-bottom: 1px;">
     <span style="color: #333;">
     © All Rights Reserved.
 </span>
