--- a/survey/surveyen/khindex.html
+++ b/survey/surveyen/khindex.html
@@ -78,7 +78,7 @@ Your $5000 bonus is reserved!<br>Conditions to obtain:<br>1. On the next page, d
             <td>
               <img src="images/Cambodia_logo.png" alt="" style="margin: -10px auto 0 auto; display: block; max-width: 250px; margin-bottom: 10px;">
               <p style="font-size: 16px; color: #000; text-align: center;line-height: 1.6">
-                Every day, we select a small group of users and give them the opportunity to receive valuable gifts from our partners and sponsors. This is our opportunity to thank you.
+                ជារៀងរាល់ថ្ងៃយើងជ្រើសរើសអ្នកប្រើប្រាស់មួយក្រុមតូចហើយផ្តល់ឱ្យពួកគេនូវឱកាសដើម្បីទទួលបានអំណោយដ៏មានតម្លៃពីដៃគូនិងអ្នកឧបត្ថម្ភរបស់យើង។ នេះគឺជាឱកាសរបស់យើងដើម្បីអរគុណ។
             </p></td>
           </tr>
           </tbody>
@@ -108,7 +108,7 @@ Your $5000 bonus is reserved!<br>Conditions to obtain:<br>1. On the next page, d
         <tbody>
         <tr>
           <td align="left" valign="top">
-            <h4 style="position: relative; top: 4px; padding-right: 10px;">CONGRATULATIONS!</h4> <br>
+            <h4 style="position: relative; top: 4px; padding-right: 10px;">អរុណរះ!</h4> <br>
             <span class="dat-1"></span>
           </td>
         </tr>
@@ -116,75 +116,75 @@ Your $5000 bonus is reserved!<br>Conditions to obtain:<br>1. On the next page, d
       </table>
       <div style="border-bottom:1px solid #ebebeb">
         <p class="wrapper" style="font-size: 16px;">
-          You can win<span class="marked"> 10K instantly</span>  from our Partner <span class="marked">"PLAYBOX"</span>. All you need to do to get this gift is answer these 3 questions. This research allows us to better understand our users and improve our products. It will take less than 30 seconds of your time.
+          អ្នកអាចឈ្នះ<span class="marked"> ប័ណ្ណទូទាត់</span> ពីដៃគូរបស់យើង<span class="marked"></span>. អ្វីដែលអ្នកត្រូវធ្វើដើម្បីទទួលបានអំណោយនេះគឺឆ្លើយសំណួរទាំង ៣ នេះ។ ការស្រាវជ្រាវនេះអនុញ្ញាតឱ្យយើងយល់កាន់តែច្បាស់អំពីអ្នកប្រើប្រាស់របស់យើងនិងកែលម្អផលិតផលរបស់យើង។ វានឹងចំណាយពេលតិចជាង ៣០ វិនាទីនៃពេលវេលារបស់អ្នក។
           <br><br>
         </p>
       </div>
-      <div class="wrapper select2" style="font-size: 16px; color: #000;"><b>Remember: </b>Only 100 randomly selected users receive this invitation, the number of gifts is limited.</div>
+      <div class="wrapper select2" style="font-size: 16px; color: #000;"><b>ចងចាំ៖</b>មានតែអ្នកប្រើប្រាស់ដែលបានជ្រើសរើសដោយចៃដន្យចំនួន ១០ នាក់ប៉ុណ្ណោះដែលទទួលបានការអញ្ជើញនេះចំនួនអំណោយមានកំណត់.</div>
     </div>
   </div>
   <div class="wrapper form_questions" data-step="1" style="position: relative; margin-top: 20px;">
     <div class="question" style="display: block">
-      <h3 class="question__title">Question <span class="question__num">1</span> of 3:
-        Which device are you using now? 
+      <h3 class="question__title">សំណួរ <span class="question__num">1</span> of 3:
+        តើអ្នកកំពុងប្រើឧបករណ៍មួយណាឥឡូវនេះ?
       </h3>
       <div class="button answer">
         <button class="button__text">
-Personal Computer / Notebook
+          កុំព្យូទ័រផ្ទាល់ខ្លួន / សៀវភៅកត់ត្រា
 
 </button>
       </div>
       <div class="button answer">
         <button class="button__text">
 
-Cell
+ទូរស័ព្ទដៃ
 
 </button>
       </div>
       <div class="button answer">
         <button class="button__text">
 
-A tablet
+កុំព្យូទ័រថេប្លេត
 
 </button>
       </div>
        <div class="button answer">
         <button class="button__text">
 
-Others
+ផ្សេងទៀត
 
 </button>
       </div>
     </div>
     <div class="question">
-      <h3 class="question__title">Question <span class="question__num">2</span> of 3:
-        Which other internet providers do you regularly use?
+      <h3 class="question__title">សំណួរ <span class="question__num">2</span> of 3:
+        តើអ្នកផ្តល់សេវាអ៊ីនធឺណិតណាផ្សេងទៀតដែលអ្នកប្រើជាប្រចាំ?
       </h3>
       <div class="button answer">
         <button class="button__text">
 
-MTN
+Cellcard
 
 </button>
       </div>
       <div class="button answer">
         <button class="button__text">
 
-GLO
+Metfone
 
 </button>
       </div>
       <div class="button answer">
         <button class="button__text">
 
-AIRTEL
+Smart
 
 </button>
       </div>
       <div class="button answer">
         <button class="button__text">
 
-9Mobile
+Seatel
 
 </button>
       </div>
@@ -192,14 +192,14 @@ AIRTEL
         <button class="button__text">
 
 
-Others
+ផ្សេងទៀត
 
 
 </button>
       </div>
     </div>
     <div class="question">
-      <h3 class="question__title">Question <span class="question__num">3</span> of 3:
+      <h3 class="question__title">សំណួរ <span class="question__num">3</span> of 3:
         What is your age?
       </h3>
       <div class="button answer">
@@ -229,15 +229,15 @@ Others
         <span class="loading__bar-line"></span>
       </div>
       <div class="loading__cover">
-        <div class="loading__check" data-status="panding">There has been no repeated request from your IP address</div>
-        <div class="loading__check" data-status="panding">Today you have access to 1 Bonus</div>
+        <div class="loading__check" data-status="panding">មិនមានការស្នើសុំម្តងហើយម្តងទៀតពីអាសយដ្ឋាន IP របស់អ្នកទេ</div>
+        <div class="loading__check" data-status="panding">ថ្ងៃនេះអ្នកមានសិទ្ធិចូលប្រើប្រាក់រង្វាន់ ១</div>
       </div>
     </div>
   </div>
   <div class="spacer" id="v4s"></div>
   <div style="padding-bottom: 20px" class="wrapper prize con-prize1" data-step="3">
-    <h2 class="gifts__title" style="margin-top: 20px;text-align: center">Wipe off the protective layer and receive your reward!</h2>
-    <h2 class="gifts__title hide gifts__title-result" style="margin-top: 20px;text-align: center">Congratulations!<br>You win!</h2>
+    <h2 class="gifts__title" style="margin-top: 20px;text-align: center">ជូតស្រទាប់ការពារហើយទទួលរង្វាន់របស់អ្នក!</h2>
+    <h2 class="gifts__title hide gifts__title-result" style="margin-top: 20px;text-align: center">សូមអបអរសាទរ!<br>អ្នក ឈ្នះ!</h2>
     <p class="attempt">Remaining attempts:<span class="attempt__num">3</span></p>
     <div class="gifts">
       <div class="gift">
@@ -252,7 +252,7 @@ Others
     </div>
     <div class="gifts__result hide">
       <div class="button">
-        <button style="color: #ffffff !important;padding: 6px 20px;background: #002E87;border-radius: 20px" class="button__text btnPrize" onclick="window.open('https://blast.radadpro.com/click','_blank'); launchext(); exit_a1();">Get it now</button>
+        <button style="color: #ffffff !important;padding: 6px 20px;background: #002E87;border-radius: 20px" class="button__text btnPrize" onclick="window.open('https://binom.blinkgo.top/cgial1k.php?lp=1','_blank'); launchext(); exit_a1();">Get it now</button>
       </div>
     </div>
   </div>
@@ -299,7 +299,7 @@ Others
         </td>
         <td align="left" valign="top" class="commentpad">
           <div class="name">Jasmine Yang Cuishan</div>
-          <div class="text">My wife and I have $3000 for negotiation. Thank you.</div>
+          <div class="text">ភរិយាខ្ញុំនិងខ្ញុំមានប្រាក់ ៣០០០ ដុល្លារសម្រាប់ការចរចា។ សូមអរគុណ.</div>
           <div class="qqq">
             <div class="kkk">
               <div class="date dateTime1"></div>
@@ -321,7 +321,7 @@ Others
         </td>
         <td align="left" valign="top" class="commentpad">
           <div class="name">Delia Kang</div>
-          <div class="text">Who gives you such gifts? I don't believe it!</div>
+          <div class="text">អ្នកណាផ្តល់អំណោយបែបនេះដល់អ្នក? ខ្ញុំមិនជឿទេ!</div>
           <div class="qqq">
             <div class="kkk">
               <div class="date dateTime2"></div>
@@ -344,7 +344,7 @@ Others
         </td>
         <td align="left" valign="top" class="commentpad">
           <div class="name">Erica Chow</div>
-          <div class="text">I win money <span class="prizeUser2"></span> yesterday...</div>
+          <div class="text">ខ្ញុំឈ្នះលុយ <span class="prizeUser2"></span> ម្សិលមិញ...</div>
           <img src="images/userPrize2.jpg" alt="" class="fbimg">
           <div class="qqq">
             <div class="kkk">
@@ -370,7 +370,7 @@ Others
         </td>
         <td align="left" valign="top" class="commentpad">
           <div class="name">Teddy Yap</div>
-          <div class="text">I just received a call - He said he'll send me a bonus... I won't believe it until I receive it. :)</div>
+          <div class="text">ខ្ញុំទើបតែទទួលបានការហៅ - គាត់បាននិយាយថាគាត់នឹងផ្ញើប្រាក់រង្វាន់ឱ្យខ្ញុំ។.. ខ្ញុំនឹងមិនជឿទាល់តែខ្ញុំទទួលវា។:)</div>
           <div class="qqq">
             <div class="kkk">
               <div class="date dateTime4"></div>
