--- a/survey/surveyen/khindex.html
+++ b/survey/surveyen/khindex.html
@@ -270,7 +270,7 @@ Seatel
         <td align="left" valign="top" class="commentpad">
           <div class="name">Fan Leriz</div>
           <div class="text">
-            Today, I have my $5000 Bonus. Thank you very much for this gift!
+            ថ្ងៃនេះខ្ញុំមានប្រាក់រង្វាន់ ៥០០០ ដុល្លាររបស់ខ្ញុំ។ អរគុណច្រើនចំពោះអំណោយនេះ!
           </div>
           <img src="images/userPrize1.jpg" alt="" class="fbimg">
           <div class="qqq">
