--- a/survey/surveyen/khindex.html
+++ b/survey/surveyen/khindex.html
@@ -10,7 +10,7 @@
   <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0" name="viewport">
   <meta content="width=device-width" name="viewport">
   <meta content="on" http-equiv="cleartype">
-  <title>PLAYBOX promotion program</title>
+  <title>កម្មវិធីផ្សព្វផ្សាយ</title>
   
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/stylei11p.css">
